manifests/whisper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisper
  labels:
    app.kubernetes.io/name: whisper
spec:
  selector:
    app.kubernetes.io/name: whisper
  ports:
    - name: http
      port: 3000
      targetPort: http
